# coqui

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md
src/: CMakeLists.txt  COQUI.settings  config.h.cmake.in  configuration.hpp  coqui_env.sh.in
src/IO/: AppAbort.hpp  CMakeLists.txt  app_loggers.cpp  app_loggers.h  fmt_extensions.hpp
src/IO/ptree/: InputParser.hpp  ptree_utilities.hpp  toml_utilities.hpp
src/arch/: CMakeLists.txt  _init.hpp  arch.cpp  arch.h
src/arch/CUDA/: cuda_init.cpp  cuda_init.h  cuda_sync.cpp  cuda_sync.h
src/grids/: g_grids.hpp  grid_utils.hpp  r_grids.hpp
src/hamiltonian/: CMakeLists.txt  add_kinetic.cpp  add_kinetic.h  add_vloc.hpp  add_vxc.cpp  add_vxc.h  gen_one_body_hamiltonian.icc  matrix_elements.h  one_body_hamiltonian.hpp  potentials.hpp  pyscf_one_body_hamiltonian.icc  v_h.hpp
src/hamiltonian/pseudo/: pseudopot.cpp  pseudopot.h  pseudopot_to_h5.hpp  pseudopot_type.hpp
src/hamiltonian/tests/: CMakeLists.txt  test_hamilt.cpp  test_pseudo.cpp
src/hamiltonian/unused/: potentials_matrix_elements.hpp
src/main/: CMakeLists.txt  main.cpp
src/mean_field/: CMakeLists.txt  MF.hpp  default_MF.hpp  distributed_orbital_readers.hpp  mf_source.hpp  mf_utils.hpp  properties.hpp
src/mean_field/bdft/: bdft_readonly.cpp  bdft_readonly.hpp  bdft_system.hpp
src/mean_field/model_hamiltonian/: model_readonly.hpp  model_system.hpp  model_utils.hpp
src/mean_field/pyscf/: pyscf_readonly.hpp  pyscf_system.hpp
src/mean_field/qe/: qe_interface.cpp  qe_interface.h  qe_readonly.cpp  qe_readonly.hpp  qe_system.hpp
src/mean_field/symmetry/: bz_symmetry.hpp  unfold_bz.cpp  unfold_bz.h
src/mean_field/tests/: CMakeLists.txt  test_mf.cpp
src/methods/: CMakeLists.txt  MBPT_drivers.cpp  MBPT_drivers.h
src/methods/ERI/: CMakeLists.txt  check_eri_symmetry.cpp  chol_reader_t.hpp  cholesky.cpp  cholesky.h  cholesky.icc  compare_eri.cpp  div_treatment_e.hpp  eri_storage_e.hpp  eri_utils.cpp  eri_utils.hpp  mb_eri_context.h  thc.cpp  thc.h  thc.icc  thc_aux.icc  thc_reader_t.hpp
src/methods/GF2/: CMakeLists.txt  cholesky_gf2.icc  gf2_t.cpp  gf2_t.h  thc_gf2.icc  thc_sosex.icc
src/methods/GW/: CMakeLists.txt  cholesky_gw.cpp  cholesky_gw.icc  cholesky_rpa.cpp  cholesky_rpa.icc  g0_div_utils.hpp  gw_t.cpp  gw_t.h  thc_gw.cpp  thc_gw.icc  thc_rpa.cpp  thc_rpa.icc
src/methods/HF/: CMakeLists.txt  cholesky_hf.cpp  cholesky_hf.icc  hf_t.cpp  hf_t.h  thc_hf.cpp  thc_hf.icc  thc_solver_comm.hpp
src/methods/SCF/: CMakeLists.txt  dca_dyson.cpp  dca_dyson.h  mb_solver_t.h  qp_context.h  qp_scf_common.cpp  rpa.cpp  scf_common.cpp  scf_common.hpp  scf_driver.cpp  scf_driver.hpp  simple_dyson.cpp  simple_dyson.h
src/methods/embedding/: CMakeLists.txt  cholesky.hpp  dc_utilities.hpp  downfold_1e.cpp  embed_eri_t.cpp  embed_eri_t.h  embed_t.cpp  embed_t.h  permut_symm.hpp  projector_boson_t.cpp  projector_boson_t.h  projector_t.cpp  projector_t.h
src/methods/mb_state/: CMakeLists.txt  mb_state.cpp  mb_state.hpp
src/methods/pproc/: CMakeLists.txt  hamiltonians.cpp  hamiltonians.h  pproc_drivers.hpp  pproc_t.cpp  pproc_t.h  wavefunction_utils.cpp  wavefunction_utils.h
src/methods/scr_coulomb/: CMakeLists.txt  edmft_pi.icc  rpa_pi.icc  scr_coulomb_chol.cpp  scr_coulomb_t.cpp  scr_coulomb_t.h
src/methods/tests/: test_common.hpp
src/methods/tools/: CMakeLists.txt  chkpt_utils.cpp  chkpt_utils.h
src/numerics/: CMakeLists.txt  nda_functions.hpp
src/numerics/ac/: AC_t.hpp  CMakeLists.txt  ac_context.h  ac_type_e.hpp
src/numerics/detail/: ops_aux.hpp
src/numerics/device_kernels/: CMakeLists.txt  kernels.h
src/numerics/distributed_array/: h5.hpp  nda.hpp  nda_matrix.hpp  nda_utils.hpp  ops.hpp  slate_ops.hpp
src/numerics/fft/: CMakeLists.txt  cufft.cpp  cufft.h  fft_base.h  fft_define.hpp  fftw.cpp  fftw.h  nda.hpp
src/numerics/imag_axes_ft/: CMakeLists.txt  IAFT.hpp  IAFT.icc  iaft_enum_e.hpp  iaft_utils.hpp
src/numerics/iter_scf/: iter_scf_t.hpp  iter_scf_type_e.hpp  iter_scf_utils.hpp
src/numerics/sandbox/: CMakeLists.txt  contract_tests.cpp  h5_tests.cpp  mpi_tests.cpp  slate_tests.cpp
src/numerics/shared_array/: nda.hpp  nda_blas.hpp
src/numerics/sparse/: CMakeLists.txt  csr_blas.hpp  csr_matrix.hpp  csr_matrix_shared.hpp  csr_matrix_view.hpp  csr_utils.hpp  sparse.hpp  ucsr_matrix.cpp  ucsr_matrix.h  ucsr_matrix.hpp
src/numerics/tests/: CMakeLists.txt  test_nda_functions.cpp
src/orbitals/: CMakeLists.txt  orbital_generator.cpp  orbital_generator.h  pgto.cpp  pgto.h  rotate.cpp  rotate.h
src/orbitals/tests/: CMakeLists.txt  test_orbitals.cpp
src/potentials/: coulomb.hpp  potentials.hpp  potentials_impl.hpp
src/python/: CMakeLists.txt  __init__.py  version.py.in
src/python/embed/: CMakeLists.txt  __init__.py  embed.py  embed_module.cpp  embed_module.toml  embed_module.wrap.cxx  embed_module.wrap.hxx
src/python/impurity_solver/: __init__.py  bath_fit.py
src/python/interaction/: CMakeLists.txt  __init__.py  cholesky.py  eri_module.cpp  eri_module.hpp  eri_module.toml  eri_module.wrap.cxx  eri_module.wrap.hxx  thc.py
src/python/mbpt/: CMakeLists.txt  __init__.py  mbpt_driver.py  mbpt_module.cpp  mbpt_module.toml  mbpt_module.wrap.cxx  mbpt_module.wrap.hxx
src/python/mean_field/: CMakeLists.txt  __init__.py  mf.py  (+5 more)
src/scripts/: add_license_header.py  read_last_it.py
src/utilities/: CMakeLists.txt  FairDivide.hpp  Random.hpp  Timer.hpp  basis_set_utilities.hpp  catch_main.cpp  check.hpp  concepts.hpp  distributed_cholesky.hpp  fortran_helpers.f90  fortran_utilities.h  freemem.cpp  freemem.h  functions.hpp  harmonics.cpp  harmonics.h  index_map.hpp  integration.hpp  interpolation_utils.hpp  kpoint_utils.hpp  madelung_utils.hpp  math.cpp  math.h  mpi_context.cpp  mpi_context.h  occupations.hpp  parser.cpp  parser.h  proc_grid_partition.hpp  qe_utilities.hpp  stl_utils.hpp  symmetry.hpp  test_common.hpp  test_input_paths.hpp  tuple_iterator.hpp  type_traits.hpp  variant_helpers.hpp  wannier90_interface.f90
src/wannier/: CMakeLists.txt  scdm.hpp  scdm.icc  wan90.cpp  wan90.h  wan90_aux.hpp  wan90_utils.hpp
(+451 files in other folders)
