#//////////////////////////////////////////////////////////////////////////////////////
#//////////////////////////////////////////////////////////////////////////////////////

SET(SRC
  wan90.cpp
)
ADD_LIBRARY(wannier_lib ${SRC})
TARGET_LINK_LIBRARIES(wannier_lib PUBLIC utils_f meanfield) 

if (BUILD_UNIT_TESTS)
#  add_subdirectory(tests)
endif()

