#//////////////////////////////////////////////////////////////////////////////////////
#//////////////////////////////////////////////////////////////////////////////////////

add_library(mb_state_lib mb_state.cpp)
target_link_libraries(mb_state_lib PUBLIC utils numerics methods_tools_lib)
install(TARGETS mb_state_lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
