#//////////////////////////////////////////////////////////////////////////////////////
#//////////////////////////////////////////////////////////////////////////////////////

add_library(methods_tools_lib chkpt_utils.cpp)
target_link_libraries(methods_tools_lib PUBLIC utils numerics meanfield)
install(TARGETS methods_tools_lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
