#//////////////////////////////////////////////////////////////////////////////////////
#//////////////////////////////////////////////////////////////////////////////////////

add_library(device_kernels INTERFACE)
if(ENABLE_CUDA)
  add_subdirectory(cuda)
ENDIF(ENABLE_CUDA)
install(TARGETS device_kernels
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})


